Fixed textarea from being too small on teacher send classroom message page. Trello card #190.

--- a/app/assets/stylesheets/_layout.css.scss
+++ b/app/assets/stylesheets/_layout.css.scss
@@ -1627,3 +1627,8 @@ footer {
     width: auto;
   }
 }
+
+#teacher_message_classroom_command_body {
+  width: 575px;
+  height: 265px;
+}
